# og

./: Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml
src/: main.rs
template/: og.typ
