[package]
name = "og"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "OpenGraph image generation for blog.danshu.co"
repository = "https://github.com/dotzenith/og"

[dependencies]
anyhow = "1.0.98"
poem = "3.1.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
tracing = "0.1.41"
