[package]
name = "og"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "OpenGraph image generation for blog.danshu.co"
repository = "https://github.com/dotzenith/og"

[dependencies]
anyhow = "1.0.98"
poem = { version = "3.1.11", features = ["anyhow"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
